# parsec

./: .dir-locals.el  .gitattributes  .gitignore  .hgignore  .hgtags  AUTHORS  CHANGELOG.md  CHANGELOG.ptg.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  CTestCustom.cmake  DAGuE_config.h.in  Doxyfile  INSTALL  INSTALL.rst  INSTALL_STEPS.md  Jenkinsfile  LICENSE.txt  License.txt  Makefile  NEWS  NEWS-ptg  README  README.rst  assignment.c  assignment.h  atomic-gcc.h  atomic-macosx.h  atomic-ppc.h  atomic-x86_32.h  atomic-x86_64.h  atomic.h  atomic_x86_64.h  barrier.c  barrier.h  bindthread.c  bindthread.h  cholesky_hook.c  (+67 more)
QR/: CMakeLists.txt  QR.jdf  QR.nonsquare.jdf  QR_triangles.jdf  dgels.c  qr.deps  qr.t
cholesky/: CMakeLists.txt  cholesky.jdf  cholesky.jdr  cholesky_hook.c  cholesky_ll.jdf  cholesky_rl.jdf  dposv.c  dposv.gpt  exe_chol.py  timeenumerator.c
cholesky/mpi/: Makefile  cholesky_mpi.jdf  data_management.c  data_management.h  dependency_management.c  dependency_management.h  dist_exec.c  make.inc
dague/: CMakeLists.txt  arena.c  arena.h  bindthread.c  bindthread.h  dague.c  dague_binary_profile.h  dague_hwloc.c  dague_hwloc.h  dague_internal.h  dague_prof_grapher.c  dague_prof_grapher.h  data.c  data.h  data_distribution.c  data_internal.h  datarepo.h  datatype.h  debug.c  debug.h  debug_marks.c  debug_marks.h  hbbuffer.h  maxheap.h  mempool.c  mempool.h  private_mempool.c  private_mempool.h  profiling.c  profiling.h  recursive.h  remote_dep.c  remote_dep.h  remote_dep_mpi.c  scheduling.c  scheduling.h  stats.c  vpmap.c  vpmap.h
dague/class/: barrier.h  dague_lifo.c  dague_list.c  dague_object.c  dague_object.h  dequeue.h  fifo.h  hash_table.c  hash_table.h  lifo.h  list.h  list_item.h
dague/datatype/: datatype.c  datatype_mpi.h
dague/devices/: device.c  device.h
dague/fortran/: CMakeLists.txt  dague_profilef.F90  dague_profilef.c  daguef.F90  daguef.c
dague/include/: dague.h  dague.pc.in  dague_config.h.in
dague/interfaces/: CMakeLists.txt  interface.c  interface.h
dague/mca/: CMakeLists.txt  mca.h  mca_repository.c  mca_repository.h  mca_static_components.h.in
dague/utils/: argv.c  argv.h  cmd_line.c  cmd_line.h  colors.c  colors.h  dague_environ.c  dague_environ.h  installdirs.c  keyval_lex.h  keyval_lex.l  keyval_parse.c  keyval_parse.h  mca_param.c  mca_param.h  mca_param_cmd_line.c  mca_param_cmd_line.h  mca_param_internal.h  mca_parse_paramfile.c  os_path.c  os_path.h  output.c  output.h  show_help.c  show_help.h  show_help_lex.h  show_help_lex.l  zone_malloc.c  zone_malloc.h
data_dist/: CMakeLists.txt  data_distribution.c  data_distribution.h  hash_datadist.c  hash_datadist.h
data_dist/matrix/: CMakeLists.txt  apply_all.c  broadcast.jdf  diag_band_to_rect.jdf  grid_2Dcyclic.c  grid_2Dcyclic.h  local_rectangle_cyclic.c  local_rectangle_cyclic.h  map_operator.c  matrix.c  matrix.h  matrixtypes.c  pmatrix.c  precision.c  precision.h  reduce.jdf  reduce_col.jdf  reduce_row.jdf  reduce_wrapper.c  scalapack_convert.c  scalapack_convert.h  subtile.c  subtile.h  sym_two_dim_rectangle_cyclic.c  sym_two_dim_rectangle_cyclic.h  symetrical_gen.jdf  tabular_distribution.c  tabular_distribution.h  two_dim_rectangle_cyclic.c  two_dim_rectangle_cyclic.h  two_dim_tabular.c  two_dim_tabular.h  vector_two_dim_cyclic.c  vector_two_dim_cyclic.h  zmatrix.c  ztwoDBC.c
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in  README.md  binding.md  dtd.md  examples.dox  groups.dox  mainpage.md  profiling.md  task-batching.md
dplasma/: CMakeLists.txt
dplasma/cmake_modules/: FindCOREBLAS.cmake  FindPLASMA.cmake
dplasma/core/: CMakeLists.txt  core_z.h  core_ztrdv.c
dplasma/cores/: CMakeLists.txt  core_zamax.c  core_zgeadd.c  core_zgemdm.c  core_zgetrf_rectil.c  core_zgetrf_rectil_1thrd.c  core_zgetrf_sp.c  core_zhebut.c  core_zhedrk.c  core_zhetrf2_nopiv.c  core_zhetrf_nopiv.c  core_zparfb_wei.c  core_zplssq.c  core_ztradd.c  core_ztrdv.c  core_ztrmdm.c  core_ztsmqr_wei.c  cuda_sgemm.c  cuda_sgemm.h  cuda_sgemm_kernel.cu  cuda_sgemm_kernelf.cu  cuda_stsmqr.c  cuda_stsmqr.h  cuda_zgemm.c  cuda_zgemm.h  cuda_ztsmqr.c  cuda_ztsmqr.h  dplasma_cores.h  (+16 more)
examples/: CMakeLists.txt  Ex00_StartStop.c  Ex01_HelloWorld.jdf  Ex02_Chain.jdf  Ex03_ChainMPI.jdf  Ex04_ChainData.jdf  Ex05_Broadcast.jdf  Ex06_RAW.jdf  Ex07_RAW_CTL.jdf  Makefile  Makefile.example
parsec/: CMakeLists.txt  arena.c  arena.h  barrier.c  bindthread.c  bindthread.h  compound.c  data.c  data.h  data_distribution.c  data_internal.h  datarepo.c  datarepo.h  datatype.h  datatype_module.h  debug.c  debug.h  debug_marks.c  debug_marks.h  dictionary.c  dictionary.h  hbbuffer.c  hbbuffer.h  maxheap.c  maxheap.h  mempool.c  mempool.h  papi_sde.c  papi_sde.h  papi_sde_interface.c  papi_sde_interface.h  parsec.c  parsec_binary_profile.h  parsec_comm_engine.c  parsec_comm_engine.h  parsec_hwloc.c  parsec_hwloc.h  parsec_internal.h  parsec_mpi_funnelled.c  parsec_mpi_funnelled.h  (+23 more)
python/: .gitignore  Makefile  README.md  build_parsec4python.py  param_parser.py  pyproject.toml  setup.py  verbose_config.py
src/: CMakeLists.txt  arena.c  barrier.c  bindthread.c  critpath.c  dague.c  dague_hwloc.c  dague_prof_grapher.c  data.c  debug.c  dep.c  expr.c  freelist.c  gpu_data.c  gpu_data.h  instru_cachemiss.c  instru_steals.c  instrument.c  mempool.c  moesi.c  papime.c  params.c  profiling.c  remote_dep.c  remote_dep_mpi.c  schedulers.c  schedulers.c_new  scheduling.c  stats.c  symbol.c  vpmap.c
tests/: CMakeLists.txt  Testings.cmake  complex_deps.jdf  compose.c  dtt_bug_replicator.jdf  dtt_bug_replicator_ex.c  kcyclic.jdf  multichain.jdf  operator.c  pdmatgen.c  ptg_bcast.jdf  reduce.c  startup.jdf  strange.jdf  supertiles.jdf  tests_data.c  tests_data.h  tests_runtime.c  tests_runtime.h  tests_timing.h  touch.jdf  touch_ex.c  touch_exf.F90  vector.c  vector.h  write_check.jdf
tools/: CMakeLists.txt  bernsteinchecker.pl  buildDAG.c  dagenum.c  dotmerger  dotmerger.pl  dpc.c  grapher.c  grapher_create_objects.sh  parsec-dotmerger  profile2svg  svg-viewer.html  writedummy.c  writedummy2.pl
(+2376 files in other folders)
